src/design/plone/theme/theme/sass/components/_tile_collection.scss
/* ... */
.tile-collection {
    &.video-collection {
        .collectionItemImage {
            position: relative;

            .video-icon {
                position: absolute;
                top: 0;
                left: 0;
                width: 100%;
                height: 100%;
                background-color: rgba(0, 0, 0, 0.4);

                &:after {
                    content: '';
                    display: inline-block;
                    width: 100%;
                    height: 100%;
                    opacity: 0.6;
                    background-size: 30%;
                    background-repeat: no-repeat;
                    background-position: center;
                    background-image: url($img-path+'video-icon.svg');
                }
            }
        }

        .collectionItemTitle {
            font-size: 1.2em;
            padding-bottom: 10px;
            margin-bottom: 1.2em;
        }

        .collectionItemWrapper {
            .collectionItemText {
                padding: 10px 20px 20px;
            }
        }
    }

    &.gallery-collection {
        .collectionItemWrapper {
            background-color: $tile-fascia-scura;

            .collectionItemText {
                padding: 10px 20px 20px;
            }

            .collectionItemDates {
                color: #fff;
                font-weight: 100;
                padding-top: 0;
            }

            .collectionItemTitle {
                font-size: 1.2em;
                color: #fff;
                display: flex;
                flex-flow: row nowrap;

                .item-icon {
                    &:before {
                        padding-right: 10px;
                        font-size: 1.33em;
                        font-weight: 100;
                        position: relative;
                        top: -3px;
                    }

                    &.photo {
                        &:before {
                            @include make-ita('\1f4f7', #fff);
                        }
                    }

                    &.video {
                        &:before {
                            @include make-ita('\1f3a5', #fff);
                        }
                    }
                }
            }
        }
    }

    &.sights-collection {
        .tileBody {
            h3,
            h2 {
                color: $brand-primary;
                margin: 0;
            }
        }
    }

    &.empty {
        opacity: 0.35;
        background: #e3e3e3;
    }

    .tile-collection-container {
        position: relative;
        padding: 20px 0px;
        @include clearfix;
    }

    ul.tileContent {
        list-style: none;
        padding-left: 0;
        display: flex;
        flex-flow: row wrap;
        margin-left: -10px;
        margin-right: -10px;
    }

    li.collectionItem {
        padding: 20px 10px;
    }

    .showMore {
        position: absolute;
        top: 1.6em;
        right: 2%;

        a {
            font-size: 2rem;
            font-weight: $bold;
            border-bottom: 1px solid;
        }
    }

    .tileTitle {
        font-size: 1.6em;
    }

    .collectionItemWrapper {
        background: #eee;
        height: 100%;
        position: relative;

        a {
            color: #000;
            display: flex;
            flex-flow: column nowrap;
            height: 100%;
            border: 0;

            &:hover,
            &:focus {
                border: 0;

                .newsTitle,
                .videoTitle {
                    span {
                        border-bottom: 1px solid #000;
                    }
                }
            }
        }

        .collectionItemImage {
            flex: 0 0 auto;

            img {
                width: 100%;
                height: auto;
            }
        }

        .collectionItemText {
            padding: 20px;
            display: flex;
            flex-flow: column nowrap;
            flex: 1 1 auto;
            justify-content: flex-start;
        }

        .collectionItemDates {
            padding-top: 20px;
            text-align: right;
            color: $gray;

            > div {
                display: inline-block;
            }
        }

        .collectionItemTitle {
            font-weight: $bold;
            padding: 10px 0;
            font-size: 2.1rem;
        }

        .collectionItemDescription {
            font-size: 1.7rem;
        }

        .collectionItemFooter {
            margin-top: auto;
        }
    }

    @media (max-width: $screen-xs-max) {
        ul.tileContent {
            font-size: 0.9em;
        }
    }
}

@media (max-width: $screen-sm-max) {
    .mobile-hidden {
        display: none;
    }
}
/* ... */

